--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 
-:root {
+/* :root {
   --background: #ffffff;
   --foreground: #171717;
 }
@@ -23,4 +23,30 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+} */
+
+body {
+  font-family: "SF Pro Display", sans-serif;
+}
+
+.add-task{
+  transform: translate(-50%,-50%);
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 13px;
+  z-index: 1000;
+  background-color: rgba(169, 169, 169, 0.61);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.svg{
+  border-radius: 9999px;
+  background: linear-gradient(135deg,rgb(217,2,20.5),65%,rgb(0,128,200,0.9));
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 13px;
+  position: absolute;
+  bottom: 5%;
+  right: 5%;
+  cursor: pointer;
 }
